--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -5,7 +5,6 @@
     <meta name="keywords" content="seo, google, website, internet, web design, design agency, design agency, design agency, design agency, design agency, design agency, logo design atlanta">
     <meta name="description" content="I'm Mike and your should hire me to build your website">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<meta name="google-site-verification" content="Uph5oTaq0DgMxDJqTie_xdbIF41NVNai_lGo8MIN35Y" />
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
@@ -38,7 +37,7 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 					<div class="keywords" style="color:#2e2d2d;"></div>
-				<a aria-label="logo" class="navbar-brand" href="index.html"><img src="img/atlanta-web-design-logo-min.p" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
+				<a aria-label="logo" class="navbar-brand" href="index.html"><img src="img/atlanta-web-design-logo-min.png" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
 					
 
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
