--- a/P4-Project-Updates/index.html
+++ b/P4-Project-Updates/index.html
@@ -84,7 +84,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="web agency, web design, logo design, atlanta agency, mike" src="img/title.png" />
+				<h1 class="text-center">I create websites and design graphics that help <br>Atlanta companies become attractive and recognizable online.</h1>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -95,7 +95,7 @@
 				<h1 class="mg-md text-center service-header">
 					Website Design
 				</h1>
-				<p class="text-center ">
+				<p class="text-center " style="font-size: 14px;">
 					Whether you have a website that needs a refresh or you&rsquo;re starting from scratch, let&rsquo;s make a website that you can be proud of.
 				</p>
 			</div>
@@ -106,8 +106,8 @@
 				<h1 class="mg-md text-center service-header">
 					&nbsp;Website Strategy
 				</h1>
-				<p class="text-center ">
-					Rather than suggesting trendy designs, I&rsquo;ll work with you to understand your business goals and make sure we design to help you reach those goals.<br>
+				<p class="text-center " style="font-size: 14px;">
+					Rather than suggesting trendy designs, I&rsquo;ll work with you to understand your business goals and make sure we design to help you reach those goals.	
 				</p>
 			</div>
 			<div class="col-sm-4">
@@ -117,19 +117,20 @@
 				<h1 class="mg-md text-center service-header">
 					Logo Design
 				</h1>
-				<p class="text-center ">
+				<p class="text-center" style="font-size: 14px;">
 					With your business representing Atlanta, your logo should shine. I&rsquo;ll work with you to create logo and brand identity that will impress people you meet in town and online.
 				</p>
 			</div>
 		</div>
-		<div class="row voffset-lg voffset">
-			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="web agency, web design, logo design " src="img/quote.png" />
+		<div class="row mt-5">
+			<div class="col-sm-12 col-md-8 m-auto text-center">
+				<p class="statement-bloc-text" style="font-size: 14px;"><em>"Mike's an awesome <strong>freelance web designer</strong>! He captured the essence of our company in our website and has helped us <strong>double our online sales</strong> for our shop in Atlanta."</em><br> Taylor cook, project manager Apple Delights</p>
 			</div>
 		</div>
 	</div>
 </div>
 <!-- bloc-2-services END -->
+
 
 <!-- bloc-3-what-i-do -->
 <div class="bloc tc-white bgc-atomic-tangerine bloc-bg-texture texture-paper b-parallax bg-atlanta-20made-20sign-20orange d-bloc" id="bloc-3-what-i-do">
@@ -139,7 +140,7 @@
 				<h2 class="mg-md text-center tc-white">
 					I love Atlanta, my hometown, and want to see all Atlanta businesses succeed. I help by offering web design services that help local businesses stand out and attract new customers online.<br>
 				</h2>
-				<p class="text-center white">
+				<p class="text-center white" style="font-size: 14px;">
 					I'm super excited you&rsquo;re here. I partner with creative entrepreneurs and local Atlanta business that are either starting or needing to renew their website to attract business. Whether you need a complete brand identity or a redesign of your website, I&rsquo;ll work with you to create something that looks great and structured to be found on Google.<br><br><a class="ltc-white bold-link" href ="page2">Are you ready, contact me</a><br>
 				</p>
 			</div>
@@ -163,16 +164,16 @@
 				<h3 class="mg-md text-center">
 					Website for Atlanta&rsquo;s premiere Dog Sitters
 				</h3>
-				<p class="text-center">
+				<p class="text-center" style="font-size: 14px;">
 					I love dogs and was super excited to make a website for an Atlanta dog company.
 				</p>
 			</div>
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/cupcakes.jpg" data-gallery-id="gallery-1" data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img src="img/cupcakes.jpg" class="img-responsive portfolio-thumb" alt="design agency website for best cupcakes in atlanta"/></a>
-				<h3 class="mg-md text-center">
+				<h3 class="mg-md text-center" style="font-size: 14px;">
 					Web redesign for the best Atlanta&nbsp;cupcakes
 				</h3>
-				<p class="text-center">
+				<p class="text-center" style="font-size: 14px;">
 					They make the best cupcakes in Atlanta and I wanted to show this online.
 				</p>
 			</div>
@@ -180,19 +181,19 @@
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/gadgets.jpg" data-gallery-id="gallery-1" data-caption="New logo and website for Atlanta's best tech gear shop" data-frame="snapshot-lb"><img src="img/gadgets.jpg" class="img-responsive portfolio-thumb" alt="best tech shop in Atlanta" /></a>
-				<h3 class="mg-md text-center">
+				<h3 class="mg-md text-center" style="font-size: 14px;">
 					New logo and website for Atl + Gear - Atlanta&rsquo;s best tech gear shop
 				</h3>
-				<p class="text-center">
+				<p class="text-center" style="font-size: 14px;">
 					Whenever I&rsquo;m wanting to improve my web design skills, this shop inspires me.
 				</p>
 			</div>
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/security.jpg" data-gallery-id="gallery-1" data-caption="Atlanta's legal website generates 30% more clients after web redesign" data-frame="snapshot-lb"><img src="img/security.jpg" class="img-responsive portfolio-thumb" alt=" Atlanta's legal website redesign" /></a>
-				<h3 class="mg-md text-center">
+				<h3 class="mg-md text-center" style="font-size: 14px;">
 					Atlanta&rsquo;s legal new website - Generating 30% more law clients with a refresh&nbsp;
 				</h3>
-				<p class="text-center">
+				<p class="text-center" style="font-size: 14px;">
 					A few months ago, I created their new website and it&rsquo;s bringing lots of leads.
 				</p>
 			</div>
